--- a/views/ActivePageUI.ejs
+++ b/views/ActivePageUI.ejs
@@ -5,38 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>Cosy 화면</title>
     <link rel='stylesheet' href='stylesheets/chatbot.css'/>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <link rel='stylesheet' href='stylesheets/activePage.css'/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
     <script>
+    $(document).ready(function(){
+      $('#profile__icon').click(function(e){
+          $('#profile').fadeToggle();
+      });
+    });
+    </script>
+    <script>
         var level = 0;
-
         var add = 1000;
         window.onload = function(){
             document.getElementById('td1').style.backgroundImage = "url('http://localhost:44444/backg/dojeon.gif')";
-        }
-
-        function chback(){
-            var url_list = "url('http://localhost:44444/backg/" + "level" + level + ".png";
-            document.getElementById('td1').style.backgroundImage = url_list;
-            level++;
-
-            //user.point += 1000
-            <% user.point += 1000%>
-
-            user.save(function (err) {
-                if (err) console.log(err);
-                return done(err, user);
-            });
-
-            if(level == 15){
-                level = 0;
-            }
         }
         function Tochat(){
             location.href = "http://localhost:44444/ChatPage";
         }
         function logout(){
-            location.href = "http://localhost:44444/logout";
+            if (confirm('로그아웃 됩니다!')) {
+                // Yes click
+                location.href = "http://localhost:44444/logout";
+            } else {
+               // no click
+            }
         }
     </script>
     <style type="text/css">
@@ -58,11 +52,40 @@
     </style>
 </head>
 <body>
-<input type="text" onclick="chback();" value="change background"/>
-<input type="text" onclick="Tochat();" value="채팅하러갈레?"/>
-<input type="text" onclick="logout();" value="로그아웃"/>
-<input type="text" onclick="adding();" value="점수추가"/>
-<strong id="score">별명</strong>: <%= user.point %>
+
+<!-- 오른쪽 상단 user icon -->
+<img src="http://127.0.0.1:44444/images/user-icon.png" class="profile__icon" id="profile__icon"></img>
+
+<!-- 사용자 프로필 -->
+<div class="profile" id="profile">
+
+    <!-- 사용자 레벨 값 자바스크립트로 넘겨줌 (배경화면 때문에) -->
+
+    <% if (user.provider == undefined || user.provider == '') { %>
+    <div class="profile__local">
+      <div class="profile__name"><%= user.name %></div>
+      <div class="profile__email"><%= user.id_email %></div>
+      <div class="profile__date">2018.05.09</div>
+      <div class="profile__email"><%= user.point %></div>
+      <div class="profile__button">
+        <img src="http://127.0.0.1:44444/images/reset.png" class="reset__button"></img>
+        <img src="http://127.0.0.1:44444/images/logout.png" class="logout__button" onclick="logout();"></img>
+      </div>
+    </div>
+    <% } else if (user.provider == 'google') { %>
+    <div class="profile__google">
+      <div class="profile__id"><%= user.google.id %></div>
+      <div class="profile__email"><%= user.google.id_email %></div>
+      <div class="profile__name"><%= user.google.name %></div>
+
+    </div>
+    <% } %>
+</div>
+
+
+
+
+
 <div id="container" class="container"></div>
 <div style="display:none"> <audio controls autoplay src="https://s3.ap-northeast-2.amazonaws.com/fitmbucket/나얼 (Naul) - 기억의 빈자리 (Emptiness in Memory) MV.mp3" style="margin-top:20px; margin-left:40px;"> </audio>
     <script type="text/javascript" src="/javascripts/collie.min.js"></script>
@@ -75,16 +98,13 @@
                 isSimple : true,
                 color : "#fff"
             });*/
-
             var htParams = collie.util.queryString();
             var htSize = {
                 width : document.body.clientWidth,
                 height : document.body.clientHeight
             };
-
             collie.Renderer.DEBUG_RENDERING_MODE = typeof htParams.dom != "undefined" ? "dom" : (typeof htParams.canvas != "undefined" ? "canvas" : "auto");
             collie.Renderer.RETINA_DISPLAY = false;
-
             collie.ImageManager.add("cosy", "/images/cosy_small.png");
             collie.ImageManager.addSprite("cosy", {
                 //faceright : [0, 0, 129.4, 165, 8], // x, y, width, height, spriteLength
@@ -92,14 +112,11 @@
                 faceleft: [0, 0, 100, 85, 1],
                 faceright: [0, 80, 100, 85, 1]
             });
-
             var layer = new collie.Layer({
                 width : htSize.width,
                 height : htSize.height
             });
-
             var box2d = new collie.Box2d(htSize.width, htSize.height, 30);
-
             box2d.addFixture("cosy", {
                 density : 1.0,
                 friction : 0.5,
@@ -110,7 +127,6 @@
                 friction : 0,
                 restitution : 0
             });
-
             /*box2d.addFixture("bullet", {
                 density : 0,
                 friction : 0,
@@ -122,12 +138,10 @@
                 friction : 0.5,
                 restitution : 0.2
             });*/
-
             box2d.createWall("right");
             box2d.createWall("left");
             box2d.createWall("top");
             box2d.createWall("bottom");
-
             /*var box = new collie.DisplayObject({
                 x: "center",
                 y: "bottom",
@@ -135,7 +149,6 @@
                 height: 100,
                 backgroundColor: "green"
             }).addTo(layer);*/
-
             var cosy = new collie.DisplayObject({
                 width : 100,
                 height : 85,
@@ -145,53 +158,55 @@
                 backgroundImage : "cosy",
                 spriteSheet : "faceright"
             }).addTo(layer);
-
             var rTimer = collie.Timer.cycle(cosy, "450fps", {
                 to: 1
             });
 
-            rTimer.stop();
+            cosy.attach({
+                "click" : function (e) {
+                    // e.displayObject
+                    // cosy.move(450,180,400,function(e){
+                    location.href = "http://localhost:44444/ChatPage";
+                    // });
+                    // cosy.move(450,180,400,{
+                    // });
+                }
+            });
 
+
+
+
+            rTimer.stop();
             var body = box2d.createObject(cosy, {
                 width : 100,
                 height : 85
             }, "cosy");
-
             /*var box1 = box2d.createObject(box, {
                 width : 100,
                 height : 100,
                 type : "static"
             }, "rabbit");*/
-
             var player = body;
             player.SetFixedRotation(true);
-
             var htKeyPressed = {
                 left : false,
                 right : false
             };
-
             /*collie.util.addEventListener(document.body, "click", function (e) {
                 location.href = "http://localhost:44444/ChatPage";
             });*/
-
             /*collie.util.addEventListener(document.body, "click", function (e) {
                 //var nw = collie.util.cloneObject(rabbit);
                 //nw.addLayer(layer);
                 //collie.addChild(rabbit);
-
                 var temp = rabbit.clone().addTo(layer);
-
                 var tTimer = collie.Timer.cycle(temp, "30fps", {
                     to: 8
                 });
-
                 tTimer.start();
             });*/
-
             collie.util.addEventListener(document.body, "keydown", function (e) {
                 player.SetAwake(true);
-
                 switch (e.keyCode) {
                     case 39 : //right
                         htKeyPressed.right = true;
@@ -219,7 +234,6 @@
                            var ry = rabbit.get ( "y" );
                            var rw = rabbit.get("width");
                            var rh = rabbit.get("height");
-
                            var fire = new collie.DisplayObject({
                                x: rx+d*(rw/2),
                                y: ry+(rh/2),
@@ -228,22 +242,18 @@
                                mass: 1,
                                backgroundColor: "red"
                            }).addTo(layer);
-
                            var fire1 = box2d.createObject(fire, {
                                width : 10,
                                height : 4,
                                type: "dynamic"
                            }, "bullet");
-
                            fire1.SetLinearVelocity(collie.Box2d.vec2(d*20, 0), fire1.GetWorldCenter());
                        break;*/
                 }
             });
-
             collie.util.addEventListener(document.body, "keyup", function (e) {
                 var velocity = player.GetLinearVelocity();
                 rTimer.stop();
-
                 switch (e.keyCode) {
                     case 39 : //right
                         htKeyPressed.right = false;
@@ -255,13 +265,11 @@
                         break;
                 }
             });
-
             //oConsole.load(); // FPS,CANVAS
             collie.Renderer.addLayer(layer);
             collie.Renderer.load(document.getElementById("container"));
             collie.Renderer.start("300fps", function () {
                 var velocity = player.GetLinearVelocity();
-
                 if (htKeyPressed.left) {
                     player.SetLinearVelocity(collie.Box2d.vec2(-10, velocity.y));
                 }
@@ -271,38 +279,8 @@
             });
             box2d.load(false);
         });
-
     </script>
 </div>
-<div>
-    <% if (user.provider == undefined || user.provider == '') { %>
-    <h3><span class="fa fa-user"></span> 로컬 프로필</h3>
-    <br>
-    <p>
-        <button id="hide">Hide</button>
-        <strong>이메일</strong>: <%= user.id_email %><br><br>
-        <strong>별명</strong>: <%= user.name %>
-        <strong>별명</strong>: <%= user.image %>
-        <img src="<%=user.image%>" alt="이미지 설명" />
 
-        <!--
-        $(document).ready(function(){
-        $("#hide").click(function(){
-
-        });
-        }
-        -->
-
-    </p>
-    <% } else if (user.provider == 'google') { %>
-    <h3 class="text-primary"><span class="fa fa-google"></span> 구글 프로필</h3>
-    <br>
-    <p>
-        <strong>아이디</strong>: <%= user.google.id %><br><br>
-        <strong>이메일</strong>: <%= user.google.id_email %><br><br>
-        <strong>이름</strong>: <%= user.google.name %>
-    </p>
-    <% } %>
-</div>
 </body>
 </html>
